kuadrant/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcp-gateway
  namespace: mcp-server
spec:
  hostnames:
    - mcp.rlawton.hcpapps.net
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: mcp-streamable
      namespace: mcp-gateway
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: mcp-gateway
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
